2006-02-21  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/BigDecimal.java:
	(mathContext): New field.
	(precision): Likewise.
	(BigDecimal(int)): New constructor.
	(BigDecimal(long)): Likewise.
	(BigDecimal(BigInteger)): Added API docs.
	(BigDecimal(BigInteger, int)): Removed incorrect NumberFormatException
	and added API docs.
	(plus): New method.
	(round): Likewise.
	(precision): Likewise.
	(valueOf): Likewise.
	(numDigitsInLong): New implementation method.

2006-02-21  Anthony Balkissoon  <abalkiss@redhat.com>

	* java/math/MathContext.java: New class.
	* java/math/RoundingMode: New Enum.

2006-01-15  Tom Tromey  <tromey@redhat.com>

	* javax/swing/text/html/HTMLDocument.java (parseBuffer): Genericized.
	* javax/swing/text/StyleContext.java (removeAttributes): Genericized.
	* java/beans/PersistenceDelegate.java (initialize): Genericized.
	* java/beans/Encoder.java (getPersistenceDelegate): Genericized.
	(setPersistenceDelegate): Likewise.

2006-01-15  Wolfgang Baer  <WBaer@gmx.de>

	* javax/print/attribute/standard/PrinterStateReasons.java: 
	(printerStateReasonSet): Genericize the return type.

2005-01-13  Mark Wielaard  <mark@klomp.org>

	* java/lang/reflect/Modifier.java (toString(int, StringBuffer)):
	Duplicate of toString(int, StringBuilder).

2005-01-13  Mark Wielaard  <mark@klomp.org>

	* configure.ac: Set version to 0.20.
	* NEWS: Add entries for all the new work done.

2005-01-13  Mark Wielaard  <mark@klomp.org>

	* javax/swing/text/DefaultCaret.java: Chain all AssertionErrors.

2005-01-13  Mark Wielaard  <mark@klomp.org>

	* java/util/regex/Pattern.java (Pattern): Chain REException.

2006-01-13  Chris Burdess  <dog@gnu.org>

	* gnu/xml/xpath/NameTest.java: Removed debugging output.

2005-01-13  Jeroen Frijters  <jeroen@frijters.net>

	* java/security/Security.java
	(getProperty): Added hack to skip security check when trusted
	code is direct caller.

2005-01-13  Jeroen Frijters  <jeroen@frijters.net>

	* java/io/PrintStream.java