@@ -1,3 +1,12 @@
+2006-02-22  Anthony Balkissoon  <abalkiss@redhat.com>
+
+	* java/math/BigDecimal.java:
+	(BigDecimal(char[], int, int, MathContext)): New constructor.
+	(BigDecimal(char[], MathContext)): Likewise.
+	(BigDecimal(char[])): Likewise.
+	(BigDecimal(char[], int, int)): Likewise.
+	(BigDecimal(String)): Fixed handling of exponent and scale.
+
 2006-02-21  Anthony Balkissoon  <abalkiss@redhat.com>
 
 	* java/math/BigDecimal.java:
